--- a/static/css/css.css
+++ b/static/css/css.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    background: #f9f9f9;
+    background: url('https://i0.wp.com/picjumbo.com/wp-content/uploads/red-and-blue-pillars-wallpaper-abstract-background-free-image.jpeg?w=600&quality=80') no-repeat center center fixed;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
