--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,11 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="logo">MySite</div>
+            <div class="logo">
+                <a href="#">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnBU9gbJbjfzXLB4DN2pS9JPgd2Eu_nli6sA&s">
+                </a>
+            </div>
             <nav>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
