--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     {% block head %}
-
     {% endblock %}
     <title>
         {% block title %}
-
         {% endblock %}
     </title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -18,16 +18,25 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <a href="#">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnBU9gbJbjfzXLB4DN2pS9JPgd2Eu_nli6sA&s">
+                <a href="{% url 'home_page' %}">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnBU9gbJbjfzXLB4DN2pS9JPgd2Eu_nli6sA&s" alt="Logo">
                 </a>
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class="menu-item-1"><a href="#home">Home</a></li>
+                    <li class="menu-item-2"><a href="#about">About</a></li>
+                    <li class="menu-item-3"><a href="#portfolio">Portfolio</a></li>
+                    <li class="menu-item-4"><a href="#contact">Contact</a></li>
+                    {% if user.is_authenticated %}
+                        <li class="menu-item-5">
+                            <a href="#profile">
+                                <img class="user-icon" src="{% static user.user_icon %}" alt="User Icon">
+                            </a>
+                        </li>
+                    {% else %}
+                        <li><a href="{% url 'login-register' %}">Login</a></li>
+                    {% endif %}
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -44,6 +53,7 @@
     {% block js %}
 
     {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
