--- a/templates/anime/list-view.html
+++ b/templates/anime/list-view.html
@@ -48,12 +48,12 @@
                   <td>1</td>
               {% endif %}
             <td>
-            <a href="{% url 'anime-tags-edit' anime.id %}">
+            <a href="{% url 'anime-edit' anime.id %}">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFGsoWfsLm4DyNoWbADAF27MinitVnelihAg&s" style="width: 50px; height: auto; border-radius: 50%;">
             </a>
             </td>
             <td>
-                <a href="{% url 'anime-tags-delete' anime.id %}">
+                <a href="{% url 'anime-delete' anime.id %}">
                     <img style="width: 50px; height: auto; border-radius: 50%;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi2VDoVHrorYdDAff-RZ-PT-DeFnx48Yihjw&s">
                 </a>
             </td>
