--- a/templates/anime/delete.html
+++ b/templates/anime/delete.html
@@ -10,8 +10,8 @@
 
 {% block content %}
 	<div class="creat-tag"><div>
-        <h1 style="float: left;"><a href="{% url 'anime-tags-list' %}">Tags</a></h1>
-        <h1>Delete {{ object }}</h1>
+        <h1 style="float: left;"><a href="{% url 'anime-list' %}">Anime</a></h1>
+        <h1>Delete '{{ object.name }}' {{ object.year }} {{ object.anime_tags.all|join:', ' }} </h1>
     </div>
         <form method="post" action="" enctype="multipart/form-data">
             {% csrf_token %}
