--- a/templates/anime/edit.html
+++ b/templates/anime/edit.html
@@ -2,23 +2,108 @@
 {% load static %}
 
 {% block head %}
-	<link rel="stylesheet" href="{% static 'css/tag.css' %}">
+    <link rel="stylesheet" href="{% static 'css/anime create.css' %}">
 {% endblock %}
+
 {% block title %}
-	    Edit tag
+    Edit Tag
 {% endblock %}
 
 {% block content %}
-	<div class="creat-tag">
+<div class="creat-tag">
     <div>
-        <h1 style="float: left;"><a href="{% url 'anime-tags-list' %}">Tags</a></h1>
-        <h1>Edit Tag</h1>
+        <h1 style="float: left;"><a href="{% url 'anime-list' %}">Anime</a></h1>
+        <h1 style="text-align: center">Edit Anime</h1>
     </div>
-        <form method="post" action="" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Create" class="btn btn-success mt-1 mb-3">
-        </form>
+    <form method="post" action="" enctype="multipart/form-data">
+        {% csrf_token %}
+        <p>
+            <label for="id_name">Name:</label>
+            <input type="text" name="name" maxlength="255" required id="id_name" class="form-control" value="{{ anime.name }}">
+        </p>
+        <p>
+            <label for="id_image">Image:</label>
+            <input type="file" name="image" accept="image/*" id="id_image" class="form-control">
+        </p>
+        <p>
+            <label>Anime Tags:</label>
+            <button type="button" id="openTagModal" class="btn btn-primary">Edit Tags</button>
+            <div id="selectedTags">{{ anime.anime_tags.all|join:", " }}</div>
+            <input type="hidden" name="anime_tags" id="selectedTagsInput" value="{{ anime.anime_tags.all|join:", " }}
+">
+        </p>
+        <p>
+            <label for="id_year">Year:</label>
+            <input type="number" name="year" min="0" required id="id_year" class="form-control" value="{{ anime.year }}">
+        </p>
+        <p>
+            <label for="id_age_rating">Age rating:</label>
+            <input type="number" name="age_rating" min="0" required id="id_age_rating" class="form-control" value="{{ anime.age_rating }}">
+        </p>
+        <p>
+            <label for="id_season">Season:</label>
+            <input type="number" name="season" min="0" id="id_season" class="form-control" value="{{ anime.season }}">
+        </p>
+        <input type="submit" value="Save Changes" class="btn btn-success mt-1 mb-3">
+    </form>
+</div>
 
+<!-- Modal -->
+<div class="modal" id="tagModal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h3>Edit Anime Tags</h3>
+        <select id="modalTags" multiple>
+            {% for foo in anime_tags %}
+                <option value="{{ foo.id }}" {% if foo in anime.anime_tags.all %}selected{% endif %}>{{ foo.tag_name }}</option>
+            {% endfor %}
+        </select>
+        <button id="closeModal" class="btn btn-success mt-3">Close</button>
     </div>
+</div>
+
+{% block js %}
+<script>
+    const openModal = document.getElementById('openTagModal');
+    const closeModal = document.getElementById('closeModal');
+    const modal = document.getElementById('tagModal');
+    const selectedTags = document.getElementById('selectedTags');
+    const selectedTagsInput = document.getElementById('selectedTagsInput');
+    const modalTags = document.getElementById('modalTags');
+
+    // Modalni ochish
+    openModal.addEventListener('click', () => {
+        modal.style.display = 'block';
+    });
+
+    // Modalni yopish
+    closeModal.addEventListener('click', () => {
+        modal.style.display = 'none';
+        updateSelectedTags();
+    });
+
+    // Modal oynasini yopish uchun
+    document.querySelector('.close').addEventListener('click', () => {
+        modal.style.display = 'none';
+        updateSelectedTags();
+    });
+
+    // Tanlangan teglarni yangilash
+    function updateSelectedTags() {
+        const selectedOptions = Array.from(modalTags.selectedOptions);
+        const tagNames = selectedOptions.map(option => option.textContent);
+        const tagIds = selectedOptions.map(option => option.value);
+
+        selectedTags.textContent = tagNames.join(', ');
+        selectedTagsInput.value = tagIds.join(',');
+    }
+
+    // Foydalanuvchi oynani tashqarisini bosganda yopish
+    window.addEventListener('click', (event) => {
+        if (event.target == modal) {
+            modal.style.display = 'none';
+        }
+    });
+</script>
+{% endblock %}
 {% endblock %}
