--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,19 @@
 <h3>Shahar: {{ info.city }}</h3>
 <h3>Viloyat: {{ info.region }}</h3>
 <h3>Davlat: {{ info.country }}</h3>
+{#{% if info.coordinates %}#}
+{#    <h3>Joylashuv: {{ info.coordinates }}</h3>#}
+{#    <iframe#}
+{#        src="https://www.google.com/maps?q={{ info.coordinates }}&z=15&output=embed"#}
+{#        width="600"#}
+{#        height="450"#}
+{#        style="border:0;"#}
+{#        allowfullscreen=""#}
+{#        loading="lazy">#}
+{#    </iframe>#}
+{#{% else %}#}
+{#    <p>Joylashuv aniqlanmadi.</p>#}
+{#{% endif %}#}
 
-    
     </div>
 {% endblock %}
