--- a/templates/anime/create.html
+++ b/templates/anime/create.html
@@ -6,30 +6,27 @@
 {% endblock %}
 
 {% block title %}
-    Create Tag
+    Create Anime
 {% endblock %}
 
 {% block content %}
 <div class="creat-tag">
     <div>
-        <h1 style="float: left;"><a href="{% url 'anime-list' %}">Anime</a></h1>
-        <h1 style="text-align: center">Insert Anime</h1>
+        <span><a href="{% url 'anime-list' %}">Anime</a></span>
+        <h1>Insert Anime</h1>
     </div>
     <form method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
         <p>
             <label for="id_name">Name:</label>
-            <input type="text" name="name" maxlength="255" required="" id="id_name" class="form-control">
+                <input type="text" name="name" maxlength="255" required="" id="id_name" class="form-control">
         </p>
         <p>
             <label for="id_image">Image:</label>
             <input type="file" name="image" accept="image/*" required="" id="id_image" class="form-control">
         </p>
         <p>
-            <label>Anime Tags:</label>
-            <button type="button" id="openTagModal" class="btn btn-primary">Select Tags</button>
-            <div id="selectedTags" style="margin-top: 10px; font-size: 14px; color: #555;"></div>
-            <input type="hidden" name="anime_tags" id="selectedTagsInput">
+            {{ form.anime_tags }}
         </p>
         <p>
             <label for="id_year">Year:</label>
@@ -52,7 +49,7 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <h3>Select Anime Tags</h3>
-        <select id="modalTags" multiple>
+        <select name="anime_tags" id="modalTags" multiple>
             {% for foo in anime_tags %}
                 <option value="{{ foo.id }}">{{ foo.tag_name }}</option>
             {% endfor %}
