--- a/templates/episode/edit.html
+++ b/templates/episode/edit.html
@@ -3,22 +3,23 @@
 
 {% block head %}
 	<link rel="stylesheet" href="{% static 'css/tag.css' %}">
+	<link rel="stylesheet" href="{% static 'css/episode.css' %}">
 {% endblock %}
 {% block title %}
-	Delete Tag
+	    Edit tag
 {% endblock %}
 
 {% block content %}
-    <main>
-	<div class="creat-tag"><div>
-        <span><a href="{% url 'anime-tags-list' %}">Tags</a></span>
-        <h1>Delete {{ object }}</h1>
+	<div class="creat-tag">
+    <div>
+        <span><a href="{% url 'episode-list' %}">Episodes</a></span>
+        <h1>Edit Tag</h1>
     </div>
         <form method="post" action="" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="Delete" class="btn btn-danger mt-1 mb-3">
+            <input type="submit" value="Create" class="btn btn-success mt-1 mb-3">
         </form>
+
     </div>
-    </main>
 {% endblock %}
