--- a/templates/anime/edit.html
+++ b/templates/anime/edit.html
@@ -6,45 +6,40 @@
 {% endblock %}
 
 {% block title %}
-    Edit Tag
+    Edit Anime
 {% endblock %}
 
 {% block content %}
 <div class="creat-tag">
     <div>
-        <h1 style="float: left;"><a href="{% url 'anime-list' %}">Anime</a></h1>
-        <h1 style="text-align: center">Edit Anime</h1>
+        <span><a href="{% url 'anime-list' %}">Anime</a></span>
+        <h1>Insert Anime</h1>
     </div>
     <form method="post" action="" enctype="multipart/form-data">
         {% csrf_token %}
         <p>
             <label for="id_name">Name:</label>
-            <input type="text" name="name" maxlength="255" required id="id_name" class="form-control" value="{{ anime.name }}">
+            <input type="text" name="name" maxlength="255" required="" id="id_name" class="form-control" value="{{ anime.name }}">
         </p>
         <p>
-            <label for="id_image">Image:</label>
-            <input type="file" name="image" accept="image/*" id="id_image" class="form-control">
-        </p>
+            {{ form.image }}</p>
         <p>
-            <label>Anime Tags:</label>
-            <button type="button" id="openTagModal" class="btn btn-primary">Edit Tags</button>
-            <div id="selectedTags">{{ anime.anime_tags.all|join:", " }}</div>
-            <input type="hidden" name="anime_tags" id="selectedTagsInput" value="{{ anime.anime_tags.all|join:", " }}
-">
+            
+            {{ form.anime_tags }}
         </p>
         <p>
             <label for="id_year">Year:</label>
-            <input type="number" name="year" min="0" required id="id_year" class="form-control" value="{{ anime.year }}">
+            <input type="number" name="year" min="0" required="" id="id_year" class="form-control" value="{{ anime.year }}">
         </p>
         <p>
             <label for="id_age_rating">Age rating:</label>
-            <input type="number" name="age_rating" min="0" required id="id_age_rating" class="form-control" value="{{ anime.age_rating }}">
+            <input type="number" name="age_rating" min="0" required="" id="id_age_rating" class="form-control" value="{{ anime.age_rating }}">
         </p>
         <p>
             <label for="id_season">Season:</label>
             <input type="number" name="season" min="0" id="id_season" class="form-control" value="{{ anime.season }}">
         </p>
-        <input type="submit" value="Save Changes" class="btn btn-success mt-1 mb-3">
+        <input type="submit" value="Create" class="btn btn-success mt-1 mb-3">
     </form>
 </div>
 
@@ -52,16 +47,17 @@
 <div class="modal" id="tagModal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h3>Edit Anime Tags</h3>
-        <select id="modalTags" multiple>
+        <h3>Select Anime Tags</h3>
+        <select name="anime_tags" id="modalTags" multiple>
             {% for foo in anime_tags %}
-                <option value="{{ foo.id }}" {% if foo in anime.anime_tags.all %}selected{% endif %}>{{ foo.tag_name }}</option>
+                <option value="{{ foo.id }}">{{ foo.tag_name }}</option>
             {% endfor %}
         </select>
         <button id="closeModal" class="btn btn-success mt-3">Close</button>
     </div>
 </div>
 
+{% endblock %}
 {% block js %}
 <script>
     const openModal = document.getElementById('openTagModal');
@@ -105,5 +101,4 @@
         }
     });
 </script>
-{% endblock %}
 {% endblock %}
