--- a/templates/anime/list-view.html
+++ b/templates/anime/list-view.html
@@ -14,8 +14,8 @@
 
 {% block content %}
 <div class="container mt-3">
-  <h2 style="margin-top: 2%"><a href="{% url 'anime-create' %}">Create Anime</a></h2>
-  <table class="table table-dark table-striped">
+  <h2><a id="link_tags"  href="{% url 'anime-create' %}">Create Anime</a></h2>
+  <table id="tags-table-list" class="table table-dark table-striped">
     <thead>
       <tr>
         <th>Anime</th>
