--- a/templates/episode/list-view.html
+++ b/templates/episode/list-view.html
@@ -15,27 +15,49 @@
 {% block content %}
 <main>
 <div class="container mt-3">
-  <h2><a id="link_tags" href="{% url 'anime-tags-create' %}">Create tags</a></h2>
-  <table id="tags-table-list" class="table table-dark table-striped">
+  <h2><a href="{% url 'episode-create' %}">Create episode</a></h2>
+  <table class="table table-dark table-striped">
     <thead>
       <tr>
-        <th>Tag name</th>
-        <th>edit</th>
-        <th>delete</th>
+        <th>Anime info</th>
+        <th>Title</th>
+        <th>Url video</th>
+        <th>Studio</th>
+        <th>Quality</th>
+        <th>Part</th>
+        <th>Edit</th>
+        <th>Delete</th>
       </tr>
     </thead>
     <tbody>
-      {% for tag in tags %}
+      {% for episode in episodes %}
           <tr>
-            <td>{{ tag }}</td>
+              <td>
+                  {{ episode.anime_info }}
+              </td>
+              <td>{{ episode.title }}</td>
+              <td>
+                  <a href="{{ episode.url_video }}">
+                      <img src="https://cdn-icons-png.freepik.com/256/9790/9790939.png?semt=ais_hybrid" alt="img" style="width: 50px; height: auto; border-radius: 50%;"    >
+                  </a>
+              </td>
+              <td>
+                    {{ episode.studio}}
+              </td>
+              <td>{{ episode.quality }}</td>
+              <td>{{ episode.part }}</td>
+
             <td>
-            <a href="{% url 'anime-tags-edit' tag.id %}">
+            <a href="{% url 'anime-episode-edit' episode.id %}">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFGsoWfsLm4DyNoWbADAF27MinitVnelihAg&s" style="width: 50px; height: auto; border-radius: 50%;">
             </a>
             </td>
             <td>
-                <a href="{% url 'anime-tags-delete' tag.id %}">
+                <a href="{% url 'episode-delete' episode.id %}">
                     <img style="width: 50px; height: auto; border-radius: 50%;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi2VDoVHrorYdDAff-RZ-PT-DeFnx48Yihjw&s">
+                </a>
+            </td>
+          </tr>
 {#                     <button class="button">#}
 {#                        <div class="trash">#}
 {#                            <div class="top">#}
@@ -50,9 +72,6 @@
 {#                        </div>#}
 {#                        <span>Delete Item</span>#}
 {#                    </button>#}
-                </a>
-            </td>
-          </tr>
       {% endfor %}
     </tbody>
   </table>
