--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="{% static 'js/script.js' %}"></script>
+
     {% block head %}
     {% endblock %}
+
     <title>
+
         {% block title %}
+
         {% endblock %}
+
     </title>
+
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
@@ -22,7 +30,10 @@
                 <a href="{% url 'home_page' %}">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnBU9gbJbjfzXLB4DN2pS9JPgd2Eu_nli6sA&s" alt="Logo">
                 </a>
-            </div>
+        <button id="theme-toggle" class="theme-btn">
+            <i class="bi bi-moon-fill"></i> <!-- Oy belgisi -->
+        </button>
+        </div>
             <nav>
                 <ul class="nav-links">
                     <li class="menu-item-1"><a href="#home">Home</a></li>
@@ -31,7 +42,7 @@
                     <li class="menu-item-4"><a href="#contact">Contact</a></li>
                     {% if user.is_authenticated %}
                         <li class="menu-item-5">
-                            <a href="#profile">
+                            <a href="{% url 'profile' %}">
                                 <img class="user-icon" src="{% static user.user_icon %}" alt="User Icon">
                             </a>
                         </li>
@@ -50,7 +61,13 @@
     {% block content %}
 
     {% endblock %}
-
+<footer class="footer sticky-footer bg-dark text-white text-center py-3">
+    <div class="container">
+        <p>&copy; 2024 Barcha huquqlar himoyalangan |
+            <a href="{% url 'home_page' %}" class="text-white">Bosh sahifa</a>
+        </p>
+    </div>
+</footer>
     {% block js %}
 
     {% endblock %}
